Se agregó media para responsive 400px

--- a/sass/_shipping-data.scss
+++ b/sass/_shipping-data.scss
@@ -117,6 +117,10 @@
                     width: 49% !important;
                     float: right!important;
                     clear: none !important;
+
+                    @media (min-width: 400px) {
+                        width: 100% !important;
+                    }
                 }
         
                 &.float-width-input{
